test/log/compare/vcmpeq_vx_i16.txt
vcmpeq_vx_i16.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vcmpeq_vx_i16.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vcmpeq_vx_i16.c:30:6: warning: no previous prototype for 'vcmpeq_vx_i16_golden' [-Wmissing-prototypes]
   30 | void vcmpeq_vx_i16_golden(uint64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vcmpeq_vx_i16.c: In function 'vcmpeq_vx_i16_golden':
vcmpeq_vx_i16.c:32:26: error: 'a' undeclared (first use in this function)
   32 |         exp_result[i] = (a[i]==b);
      |                          ^
vcmpeq_vx_i16.c:32:26: note: each undeclared identifier is reported only once for each function it appears in
vcmpeq_vx_i16.c:32:32: error: 'b' undeclared (first use in this function)
   32 |         exp_result[i] = (a[i]==b);
      |                                ^
vcmpeq_vx_i16.c: In function 'main':
vcmpeq_vx_i16.c:52:26: warning: passing argument 1 of 'vcmpeq_vx_i16_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   52 |     vcmpeq_vx_i16_golden(exp_a,exp_b,exp_result);
      |                          ^~~~~
      |                          |
      |                          int16_t * {aka short int *}
vcmpeq_vx_i16.c:30:37: note: expected 'uint64_t *' {aka 'long long unsigned int *'} but argument is of type 'int16_t *' {aka 'short int *'}
   30 | void vcmpeq_vx_i16_golden(uint64_t *exp_result) {
      |                           ~~~~~~~~~~^~~~~~~~~~
vcmpeq_vx_i16.c:52:5: error: too many arguments to function 'vcmpeq_vx_i16_golden'
   52 |     vcmpeq_vx_i16_golden(exp_a,exp_b,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~
vcmpeq_vx_i16.c:30:6: note: declared here
   30 | void vcmpeq_vx_i16_golden(uint64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vcmpeq_vx_i16.c:60:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint64_t' {aka 'long long unsigned int'} [-Wformat=]
   60 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint64_t {aka long long unsigned int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmpeq_vx_i16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vcmpeq_vx_i16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vcmpeq_vx_i16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmpeq_vx_i16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed